# android_device_lge_e739

.repo/local_manifests/: lg_e739.xml
bootable/recovery-cm/: recovery.cpp  recovery.h  ui.cpp
device/lge/e739/: BoardConfig.mk  BoardConfig.mk~
device/lge/victor-common/overlay/frameworks/base/core/res/res/values/: config.xml
system/core/fs_mgr/: fs_mgr.c  fs_mgr_priv.h
test/: CMakeLists.txt  Makefile  build-toolchain.sh  configure.ac
test/cmake_includes/: Android.CMakeLists.txt  CMakeLists.txt  Toolchain.CMakeLists.txt
test/module/: Makefile
test/system/core/: CMakeLists.txt
test/system/core/fs_mgr/: CMakeLists.txt  Makefile  Makefile.am
test/tools/: build_android.py
